--- a/RMDs/Activity_Network _Correlations.Rmd
+++ b/RMDs/Activity_Network _Correlations.Rmd
@@ -18,7 +18,7 @@ library(readxl)
 library(pracma)
 library(conflicted)
 library(data.table)
-library(pheatmap)
+library(corrplot)
 
 conflicts_prefer(dplyr::filter())
 
